switched from eliding to scrolling for treeviews. fixed small but annoying scrollbar layout issues.

--- a/src/client/views/_nodeModuleOverrides.scss
+++ b/src/client/views/_nodeModuleOverrides.scss
@@ -3,7 +3,6 @@
 // goldenlayout stuff
 div .lm_header {
   background: $dark-color;
-  min-height: 2em;
 }
 
 .lm_tab {
